Broke out all tests for built-in functions into separate classes.
git-svn-id: http://chianti.ucsd.edu/svn@20587 0ecc0d97-ab19-0410-9704-bfe1a75892f5