@@ -35,7 +35,7 @@ import junit.framework.*;
 
 public class TanTest extends TestCase {
 	public void testAll() throws Exception {
-		assertTrue(Framework.executeTest("=TAN(1.047197551)", new Double(1.7320508067824862)));
-		assertFalse(Framework.executeTest("=TAN(" + (Math.PI / 2.0) + ")", new Double(0.0)));
+		assertTrue(Framework.executeTest("=TAN(1.047197551)", Double.valueOf(1.7320508067824862)));
+		assertTrue(Framework.executeTest("=TAN(" + (Math.PI / 2.0) + ")", Double.valueOf(1.633123935319537E16)));
 	}
 }
